--- a/app/templates/application-error.hbs
+++ b/app/templates/application-error.hbs
@@ -1,9 +1,9 @@
-{{#title-bar}}
+<TitleBar>
   Not Found
-{{/title-bar}}
+</TitleBar>
 
-{{#paper-content class="notfound" flex-layout="column" flex=true}}
+<PaperContent @class="notfound" @flex-layout="column" @flex={{true}}>
   <div class="huge">{{if model.message model.message "500 Error"}}</div>
 
   <div class="description">We couldn't find this page. Please check the URL to make sure it is correct.</div>
-{{/paper-content}}
+</PaperContent>
