--- a/app/templates/file-loading.hbs
+++ b/app/templates/file-loading.hbs
@@ -1,7 +1,7 @@
-{{#title-bar}}
+<TitleBar>
   <div class="title">
   </div>
-{{/title-bar}}
+</TitleBar>
 
 <div class="loading-container">
   <div class="loader"></div>
