--- a/app/templates/plugins/gallery.hbs
+++ b/app/templates/plugins/gallery.hbs
@@ -1,1 +1,1 @@
-{{photo-swipe enabled=galleryEnabled options=galleryOptions items=directoryGalleryItems}}
+<PhotoSwipe @enabled={{galleryEnabled}} @options={{galleryOptions}} @items={{directoryGalleryItems}} />
