fix deprecations, move webdav client to a class

--- a/app/components/delete-dialog/template.hbs
+++ b/app/components/delete-dialog/template.hbs
@@ -1,10 +1,10 @@
-{{#if this.active}}
+{{#if @active}}
   <PaperDialog @fullscreen={{true}} @origin=".actions">
     <PaperToolbar>
       <div class="md-toolbar-tools">
         <h2>Delete Directory</h2>
         <span class="flex"></span>
-        <PaperButton @iconButton={{true}} {{on "click" this.close}}><PaperIcon @icon="close"/></PaperButton>
+        <PaperButton @iconButton={{true}} {{on "click" @onClose}}><PaperIcon @icon="close"/></PaperButton>
       </div>
     </PaperToolbar>
 
@@ -14,8 +14,8 @@
 
     <PaperDialogActions class="layout-row">
       <span class="flex"></span>
-      <PaperButton @primary={{true}} {{on "click" this.close}}>Cancel</PaperButton>
-      <PaperButton @primary={{true}} {{on "click" this.deleteItem}}>Delete</PaperButton>
+      <PaperButton @primary={{true}} {{on "click" @onClose}}>Cancel</PaperButton>
+      <PaperButton @primary={{true}} {{on "click" this.onDelete}}>Delete</PaperButton>
     </PaperDialogActions>
   </PaperDialog>
 {{/if}}
