highlight files sidebar item when showing directories

--- a/app/components/sidebar/template.hbs
+++ b/app/components/sidebar/template.hbs
@@ -1,7 +1,7 @@
 <div class="logo-bg" aria-hidden="true"></div>
 <img src="/images/sidebar-logo@2x.png" width="50" height="61" alt="Davros">
 
-<LinkTo @route="home" @current-when="file">
+<LinkTo @route="home" @current-when="files file">
   {{paper-icon "folder"}}
   <div>Files</div>
 </LinkTo>
