--- a/app/templates/clients.hbs
+++ b/app/templates/clients.hbs
@@ -2,7 +2,7 @@
   Desktop and Mobile Clients
 </TitleBar>
 
-<PaperContent @class="clients" @flex-layout="column" @flex={{true}}>
+<PaperContent class="clients" @flex-layout="column" @flex={{true}}>
   <p class="content">
     You can synchronize your file storage with your local device using a desktop or mobile WebDAV client. Unfortunately, <b>OwnCloud/NextCloud are not supported</b>, due to protocol incompatibilities.
 
