--- a/app/templates/file.hbs
+++ b/app/templates/file.hbs
@@ -1,5 +1,5 @@
 <TitleBar>
-  <div class="title">
+  <div class="title truncate" title="Viewing {{this.model.name}}">
     Viewing
     <PathBreadcrumb @path={{this.model.path}} />
     {{this.model.name}}
