--- a/app/components/new-directory-dialog/template.hbs
+++ b/app/components/new-directory-dialog/template.hbs
@@ -1,27 +1,21 @@
-{{#if @active}}
-  <PaperDialog @fullscreen={{true}} @origin=".actions">
-    <PaperToolbar>
-      <div class="md-toolbar-tools">
-        <h2>New Directory</h2>
-        <span class="flex"></span>
-        <PaperButton @iconButton={{true}} @onClick={{this.close}}>
-          <PaperIcon @icon="close"/>
-        </PaperButton>
-      </div>
-    </PaperToolbar>
+<div class="w-64 p-4">
+  <div class="modal-title flex">
+    <h2 class="text-lg font-bold">New Directory</h2>
+    <span class="flex-1"></span>
+    <button type="button" {{on "click" this.close}}>
+      <Icon @icon="close"/>
+    </button>
+  </div>
 
-    <PaperForm @onSubmit={{fn this.create}} as |form|>
-      <PaperDialogContent>
-        <form.input @label="Name" @autofocus={{true}} @value={{this.directoryName}} @customValidations={{this.directoryValidation}} @onChange={{fn (mut this.directoryName)}} />
-      </PaperDialogContent>
+  <form {{on "submit" this.create}}>
+    <input label="Name" class="form-input my-4" placeholder="Name" autofocus={{true}} value={{this.directoryName}} {{on "change" (fn (mut this.directoryName))}} />
 
-      <PaperDialogActions class="layout-row">
-        <span class="flex"></span>
-        <PaperButton @primary={{true}} @onClick={{fn this.close}}>Cancel</PaperButton>
-        <form.submit-button @primary={{true}} @raised={{true}} @disabled={{form.isInvalid}}>
-          Create
-        </form.submit-button>
-      </PaperDialogActions>
-    </PaperForm>
-  </PaperDialog>
-{{/if}}
+    <div class="form-actions flex">
+      <span class="flex-1"></span>
+      <button type="button" class="pr-4" {{on "click" this.close}}>Cancel</button>
+      <button type="submit" class="button-primary" disabled={{false}}>
+        Create
+      </button>
+    </div>
+  </form>
+</div>
