--- a/app/components/title-bar/template.hbs
+++ b/app/components/title-bar/template.hbs
@@ -1,5 +1,3 @@
-<PaperToolbar class="md-whiteframe-1dp page-main-toolbar" as |toolbar|>
-  <toolbar.tools class="title-bar">
-    {{yield}}
-  </toolbar.tools>
-</PaperToolbar>
+<nav class="toolbar flex items-center justify-between bg-blue-500 text-white p-1 h-12 pl-4">
+  {{yield}}
+</nav>
