--- a/app/templates/directory.hbs
+++ b/app/templates/directory.hbs
@@ -2,7 +2,7 @@
   {{#if dropzone.active}}
     <div id="dropzone-overlay">
       <div class="message">
-        {{paper-icon "add-circle"}}
+        <Icon @icon="add_circle" />
         Drop files or directories to add them to
         <PathBreadcrumb @path={{this.model.path}} />
       </div>
@@ -19,58 +19,68 @@
   </FileUpload>
 </DavrosUploader>
 
-<TitleBar>
-  <div class="title">
-    Files in
-    <PathBreadcrumb @path={{this.model.path}} />
+<PhotoSwipe @shareEl={{false}} @items={{this.directoryGalleryItems}} as |photoswipe|>
+  <TitleBar>
+    <div class="title text-white text-lg flex-1">
+      Files in
+      <PathBreadcrumb @path={{this.model.path}} />
 
-    {{#if this.model.name}}
-      {{this.model.name}} /
-    {{/if}}
-  </div>
+      {{#if this.model.name}}
+        {{this.model.name}} /
+      {{/if}}
+    </div>
 
-  <PhotoSwipe @shareEl={{false}} @items={{this.directoryGalleryItems}} as |photoswipe|>
-    <div class="actions">
+    <div class="actions hidden sm:block">
       {{#if this.canEdit}}
-        <PaperButton @class="icon-button new-directory-button" @onClick={{fn this.chooseUpload}}>
-          {{paper-icon "file-upload" aria-label="Upload"}}
+        <button type="button" class="icon-button p-1 pb-0 mx-2 rounded hover:bg-blue-700 new-directory-button" {{on "click" (fn chooseUpload)}}>
+          <Icon @icon="file_upload" @ariaLabel="Upload file" class="block" />
 
           <EmberTooltip>
             Upload
           </EmberTooltip>
-        </PaperButton>
+        </button>
 
-        <PaperButton @class="icon-button" @onClick={{fn (mut this.newDialogActive) true}}>
-          {{paper-icon "add-circle-outline" aria-label="New directory"}}
+        <div class="relative inline-block">
+          <BasicDropdown as |modal|>
+            <modal.Trigger>
+              <button type="button" class="icon-button p-1 pb-0 mx-2 rounded hover:bg-blue-700">
+                <Icon @icon="add_circle_outline" @ariaLabel="New directory" />
 
-          <EmberTooltip>
-            New Directory
-          </EmberTooltip>
+                <EmberTooltip>
+                  New Directory
+                </EmberTooltip>
 
-        </PaperButton>
+              </button>
+            </modal.Trigger>
+
+            <modal.Content class="rounded-sm shadow-sm border">
+              <NewDirectoryDialog @active={{true}} @onCreate={{route-action "newDirectory"}} @onClose={{fn (mut this.newDialogActive) false}} />
+            </modal.Content>
+          </BasicDropdown>
+        </div>
       {{/if}}
 
       {{#if this.directoryGalleryItems.length}}
-        <PaperButton @class="icon-button" @onClick={{photoswipe.actions.open}}>
-          {{paper-icon "photo" aria-label="Slideshow"}}
+        <button type="button" class="icon-button p-1 pb-0 mx-2 rounded hover:bg-blue-700" {{on "click" (fn photoswipe.actions.open)}}>
+          <Icon @icon="photo" @ariaLabel="Slideshow" />
 
           <EmberTooltip>
             Slideshow
           </EmberTooltip>
-        </PaperButton>
+        </button>
       {{/if}}
 
-      <PaperButton @class="icon-button" @onClick="downloadDirectory">
-        {{paper-icon "file-download" aria-label="Download directory as zip"}}
+      <button type="button" class="icon-button p-1 pb-0 mx-2 rounded hover:bg-blue-700" {{on "click" this.downloadDirectory}}>
+        <Icon @icon="file_download" aria-label="Download directory as zip" />
 
         <EmberTooltip>
           Download (zip)
         </EmberTooltip>
-      </PaperButton>
+      </button>
 
       {{#if this.canEdit}}
-        <PaperButton @class="icon-button delete-button" @onClick={{fn (mut this.deleteDialogActive) true}}>
-          {{paper-icon "delete" aria-label="Delete"}}
+        <button type="button" class="icon-button p-1 pb-0 mx-2 rounded hover:bg-blue-700 delete-button" {{on "click" (fn (mut this.deleteDialogActive) true)}}>
+          <Icon @icon="delete" @ariaLabel="Delete"/>
 
           <EmberTooltip>
             {{#if this.isRoot}}
@@ -79,100 +89,138 @@
               Delete Directory
             {{/if}}
           </EmberTooltip>
-        </PaperButton>
+        </button>
       {{/if}}
     </div>
-  </PhotoSwipe>
 
-  {{!-- only displayed on mobile --}}
-  <div class="compact-actions">
-    <div class="more">
-      <PaperMenu @position="target-right target" @width={{4}} as |menu|>
-        <menu.trigger>
-          <PaperButton @class="more-button" @iconButton={{true}}>
-            {{paper-icon "more-vert" class="md-menu-origin" aria-label="Menu"}}
-          </PaperButton>
-        </menu.trigger>
+    {{!-- only displayed on mobile --}}
+    <div class="compact-actions block sm:hidden">
+      <div class="more relative">
+        <BasicDropdown @position="target-right target" @width={{4}} as |menu|>
+          <menu.Trigger>
+            <button type="button" class="more-button pr-2 mt-1">
+              <Icon @icon="menu" class="md-menu-origin" ariaLabel="Menu"/>
+            </button>
+          </menu.Trigger>
 
-        <menu.content>
-          {{#if this.canEdit}}
-            <PaperMenuItem @onClick={{fn this.chooseUpload}} @id="menu-upload-file">
-              <p class="label">Upload</p>
-              {{paper-icon "file-upload" class="md-menu-align-target"}}
-            </PaperMenuItem>
+          <menu.Content class="rounded-md bg-white shadow-xs">
+            <div class="py-1" role="menu" aria-orientation="vertical" aria-labelledby="options-menu">
+              {{#if this.canEdit}}
+                <MenuItem {{on "click" (fn this.chooseUpload)}} @id="menu-upload-file">
+                  <p class="label flex-1">Upload</p>
+                  <Icon @icon="file_upload" @class="md-menu-align-target"/>
+                </MenuItem>
 
-            <PaperMenuItem @onClick={{fn (mut this.newDialogActive) true}}>
-              <p class="label">New Directory</p>
-              {{paper-icon "add-circle-outline" class="md-menu-align-target"}}
-            </PaperMenuItem>
-          {{/if}}
+                <MenuItem>
+                  <button type="button" class="relative w-full" {{on "click" this.preventDefault}}>
+                    <BasicDropdown as |modal|>
+                      <modal.Trigger class="flex text-left">
+                        <p class="label flex-1">New Directory</p>
+                        <Icon @icon="add_circle_outline" class="md-menu-align-target"/>
+                      </modal.Trigger>
 
-          <PaperMenuItem @onClick={{fn (mut this.galleryEnabled) true}}>
-            <p class="label">View Slideshow</p>
-            {{paper-icon "photo" class="md-menu-align-target"}}
-          </PaperMenuItem>
+                      <modal.Content class="rounded-sm shadow-sm border">
+                        <NewDirectoryDialog @active={{true}} @onCreate={{route-action "newDirectory"}} @onClose={{menu.actions.close}} />
+                      </modal.Content>
+                    </BasicDropdown>
+                  </button>
 
-          <PaperMenuItem @onClick="downloadDirectory" @id="menu-download-directory">
-            <p class="label">Download (zip)</p>
-            {{paper-icon "file-download" class="md-menu-align-target"}}
-          </PaperMenuItem>
+                </MenuItem>
+              {{/if}}
 
-          {{#if this.canEdit}}
-            <PaperMenuItem @class="danger" @onClick={{fn (mut this.deleteDialogActive) true}}>
-              <p class="label">Delete Directory</p>
-              {{paper-icon "delete" class="md-menu-align-target"}}
-            </PaperMenuItem>
-          {{/if}}
-        </menu.content>
-      </PaperMenu>
+              <MenuItem {{on  "click" (fn (mut this.galleryEnabled) true)}}>
+                <p class="label flex-1">View Slideshow</p>
+                <Icon @icon="photo" class="md-menu-align-target"/>
+              </MenuItem>
+
+              <MenuItem {{on "click" this.downloadDirectory}} @id="menu-download-directory">
+                <p class="label flex-1">Download (zip)</p>
+                <Icon @icon="file_download" class="md-menu-align-target"/>
+              </MenuItem>
+
+              {{#if this.canEdit}}
+                <MenuItem @class="danger" {{on "click" (fn (mut this.deleteDialogActive) true)}}>
+                  <p class="label flex-1">Delete Directory</p>
+                  <Icon @icon="delete" class="md-menu-align-target"/>
+                </MenuItem>
+              {{/if}}
+            </div>
+          </menu.Content>
+        </BasicDropdown>
+      </div>
     </div>
-  </div>
 
-  <NewDirectoryDialog @active={{this.newDialogActive}} @onCreate={{route-action "newDirectory"}} @onClose={{fn (mut this.newDialogActive) false}} />
+    <DeleteDialog @active={{this.deleteDialogActive}} @onDelete={{route-action "delete"}} @onClose={{fn (mut this.deleteDialogActive) false }}>
+      Are you sure you want to delete
+      {{#if this.isRoot}}
+        <b>absolutely everything</b>
+        {{~else~}}
+        this directory
+        {{~/if~}}?
+        It will also be deleted from any synced clients.
+    </DeleteDialog>
+  </TitleBar>
+</PhotoSwipe>
 
-  <DeleteDialog @active={{this.deleteDialogActive}} @onDelete={{route-action "delete"}} @onClose={{fn (mut this.deleteDialogActive) false }}>
-    Are you sure you want to delete
-    {{#if this.isRoot}}
-      <b>absolutely everything</b>
-      {{~else~}}
-      this directory
-      {{~/if~}}?
-      It will also be deleted from any synced clients.
-  </DeleteDialog>
-</TitleBar>
 
 {{#if this.model.sortedFiles}}
-  <table class="file-list {{if this.showExtraFields "" "noExtraFields"}}">
+  <table class="file-list w-full {{if this.showExtraFields "" "noExtraFields"}}">
     <thead>
-      <tr>
-        <th class="name">Name</th>
-        <th class="updated"><a href="#" {{on "click" (toggle this "showExtraFields")}}>Updated</a></th>
-        <th class="size"><a href="#" {{on "click" (toggle this "showExtraFields")}}>Size</a></th>
+      <tr class="text-left text-sm sm:text-md">
+        <th class="name py-2 pl-6">Name</th>
+        {{#if this.showExtraFields}}
+        <th class="updated py-2">
+          <a href="#" {{on "click" (toggle this "showExtraFields")}}>
+            <span class="short block sm:hidden">
+              Updated
+            </span>
+            <span class="long hidden sm:block">
+              Updated
+            </span>
+          </a>
+        </th>
+        <th class="size py-2 pr-4 text-right">
+          <a href="#" {{on "click" (toggle this "showExtraFields")}}>
+            <span class="short block sm:hidden">
+              Size
+            </span>
+            <span class="long hidden sm:block">
+              Size
+            </span>
+          </a>
+        </th>
+        {{else}}
+        <th class="fields pr-4 text-right">
+          <a href="#" {{on "click" (toggle this "showExtraFields")}}>
+            <Icon @icon="chevron_left" />
+          </a>
+        </th>
+        {{/if}}
       </tr>
     </thead>
 
     <tbody>
       {{#each this.model.sortedFiles as |file|}}
-        <tr>
-          <LinkTo @route="file" @model={{file.linkedPath}} class="name" @tagName="td">
-            <div class="filename">
+        <tr class="text-sm md:text-base">
+          <td class="p-2" colspan={{if this.showExtraFields '1' '3'}}>
+            <LinkTo @route="file" @model={{file.linkedPath}} class="filename p-2 table table-fixed w-full">
               {{#if file.isDirectory}}
-                <md-icon class="paper-icon md-font material-icons md-default-theme">folder</md-icon>
+                <Icon @icon="folder" class="mr-3 ml-4 float-left" />
               {{else}}
                 {{#if (eq file.type "image")}}
-                  <ImageThumbnail @original={{file.rawPath}} @timestamp={{file.mtime}} @width={{24}} @height={{24}} @op="fit" />
+                  <ImageThumbnail class="mr-3 ml-4 h-full float-left" @original={{file.rawPath}} @timestamp={{file.mtime}} @width={{24}} @height={{24}} @op="fit" />
                 {{else}}
-                  <md-icon aria-label="type {{file.type}}" class="paper-icon md-font material-icons md-default-theme">{{-paper-underscore file.typeIcon}}</md-icon>
+                  <Icon @icon={{file.typeIcon}} class="mr-3 ml-4 float-left" />
                 {{/if}}
               {{/if}}
 
-              <div class="truncated">{{file.name}}</div>
-            </div>
-          </LinkTo>
+              <div class="truncate">{{file.name}}</div>
+            </LinkTo>
+          </td>
 
           {{#if this.showExtraFields}}
-            <td class="updated" title={{file.mtime}}>
-              <span class="short">
+            <td class="updated p-2" title={{file.mtime}}>
+              <span class="short truncate block sm:hidden">
                 {{#if this.model.lotsOfFiles}}
                   {{moment-from-now file.mtime locale="en-short" hideAffix=true}}
                 {{else}}
@@ -180,7 +228,7 @@
                 {{/if}}
               </span>
 
-              <span class="long">
+              <span class="long truncate hidden sm:block">
                 {{#if this.model.lotsOfFiles}}
                   {{moment-from-now file.mtime locale="en"}}
                 {{else}}
@@ -189,8 +237,13 @@
               </span>
             </td>
 
-            <td class="size" title="{{commify file.size}} bytes">
-              {{filesize file.size}}
+            <td class="size p-2 pr-4 text-right" title="{{commify file.size}} bytes">
+              <span class="short block sm:hidden">
+                {{filesize file.size}}
+              </span>
+              <span class="long hidden sm:block">
+                {{filesize file.size}}
+              </span>
             </td>
           {{/if}}
         </tr>
